syntax = "proto3";

package circular_reference;

option go_package = "xgo/tests/pb/pbcr";

import "proto/default.proto";

message CRMessageA {
  string t1  = 1 [ (default.field).plain = { value: { string: "123" } } ];

  CRMessageB msgB = 12 [ (default.field).plain = { value: { message: { init: true } }; skip_eval: false } ];
}

message CRMessageB {
  string t1  = 1 [ (default.field).plain = { value: { string: "456" } } ];

  CRMessageC msgC = 13 [ (default.field).plain = { value: { message: { init: true } }; skip_eval: false } ];
}

message CRMessageC {
  string t1  = 1 [ (default.field).plain = { value: { string: "789" } } ];

  CRMessageA msgA = 11 [ (default.field).plain = { value: { message: { init: true } }; skip_eval: false } ];
}
